--- a/src/lib/coil/configure.ac
+++ b/src/lib/coil/configure.ac
@@ -159,7 +159,7 @@ case $system in
 	AC_DEFINE([COIL_PLATFORM], [POSIX], [Platform is POSIX])
 	CPPFLAGS="-I/usr/local/include $CPPFLAGS"
 	CXXFLAGS="-I/usr/local/include $CXXFLAGS"
-	LDFLAGS="-L/usr/qnx650/target/qnx6/x86/lib/gcc/4.4.2/ -L/usr/qnx650/target/qnx6/x86/lib/ -luuid"
+	LDFLAGS="-L/usr/local/lib/ -L/usr/qnx650/target/qnx6/x86/lib/gcc/4.4.2/ -L/usr/qnx650/target/qnx6/x86/lib/ -luuid"
 	COIL_PLATFORM=posix
 	;;	
 [CYGWIN*)]
