[compat] enable clang-8 build on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
 
 env:
   - TARGET_DIST=ubuntu TARGET_VER=1804
+  - TARGET_DIST=ubuntu TARGET_VER=1804-clang  
   - TARGET_DIST=ubuntu TARGET_VER=1604
   - TARGET_DIST=debian TARGET_VER=8
 
